force-app/main/default/objects/Field_Mapping__c/Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>A single source-to-target field mapping under a Mapping Definition, including optional transformation settings.</description>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>FM-{00000000}</displayFormat>
        <label>Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>