force-app/main/default/objects/Field_Mapping__c/fields/Concat_Separator__c.field-meta.xml
<CustomField>
    <fullName>Concat_Separator__c</fullName>
    <description>Separator used when Transformation Type is Concatenate.</description>
    <label>Concat Separator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>