force-app/main/default/objects/Field_Mapping__c/fields/Format_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Format_Pattern__c</fullName>
    <description>Date format pattern used when Transformation Type is Date Format (e.g. yyyy-MM-dd).</description>
    <label>Format Pattern</label>
    <length>100</length>
    <type>Text</type>
</CustomField>