force-app/main/default/objects/Field_Mapping__c/fields/Mapping_Definition__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Definition__c</fullName>
    <label>Mapping Definition</label>
    <referenceTo>Mapping_Definition__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>FieldMappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>