force-app/main/default/objects/Field_Mapping__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>Source field API name, or a comma-separated list when Transformation Type is Concatenate.</description>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>