force-app/main/default/objects/Field_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>Target object field API name (typically a Patient__c field).</description>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>