force-app/main/default/objects/Field_Mapping__c/fields/Transformation_Type__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Type__c</fullName>
    <label>Transformation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Default Value</fullName>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>Uppercase</fullName>
            </value>
            <value>
                <fullName>Lowercase</fullName>
            </value>
            <value>
                <fullName>Date Format</fullName>
            </value>
            <value>
                <fullName>Picklist Value Map</fullName>
            </value>
            <value>
                <fullName>Concatenate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>