force-app/main/default/objects/Field_Mapping__c/listViews/All_Field_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Field_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Mapping_Definition__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Transformation_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Field Mappings</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>