force-app/main/default/objects/Field_Mapping__c/listViews/Picklist_Value_Maps.listView-meta.xml
<ListView>
    <fullName>Picklist_Value_Maps</fullName>
    <columns>NAME</columns>
    <columns>Mapping_Definition__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Transformation_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transformation_Type__c</field>
        <operation>equals</operation>
        <value>Picklist Value Map</value>
    </filters>
    <label>Picklist Value Maps</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>